- fixed image toggle - fixed broken category navigation - fixed social media icon positions - added parameter itemTitle to tracking calls

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -79,14 +79,14 @@
     </div>
   </div>
 
-  <a href="https://www.instagram.com/wewannashop2023" title="follow us on instagram" target="ww-instram">
-    <img src="assets/images/instagram-icon.webp" class="socialMedia__icons socialMedia__icons--instagram"/>
+  <a href="https://www.instagram.com/wewannashop2023" title="follow us on instagram" target="ww-instagram">
+    <img src="assets/images/instagram-icon.webp" class="socialMedia__icons{{showSearchBar ? '' : ' socialMedia__icons--thinHeader'}} socialMedia__icons--instagram"/>
   </a>
   <a href="https://www.facebook.com/profile.php?id=100095214000161" title="follow us on facebook" target="ww-facebook">
-    <img src="assets/images/facebook_icon.png" class="socialMedia__icons socialMedia__icons--facebook"/>
+    <img src="assets/images/facebook_icon.png" class="socialMedia__icons{{showSearchBar ? '' : ' socialMedia__icons--thinHeader'}} socialMedia__icons--facebook"/>
   </a>
-  <a href="https://www.pinterest.de/wewannashop" title="follow us on pinterest" target="ww-instram">
-    <img src="assets/images/pinterest.png" class="socialMedia__icons socialMedia__icons--pinterest"/>
+  <a href="https://www.pinterest.de/wewannashop" title="follow us on pinterest" target="ww-pinterest">
+    <img src="assets/images/pinterest.png" class="socialMedia__icons{{showSearchBar ? '' : ' socialMedia__icons--thinHeader'}} socialMedia__icons--pinterest"/>
   </a>
 </div>
 
@@ -102,8 +102,7 @@
   <div
     *ngFor="let item of categoryItems"
     [ngClass]="['header__menuItem', activeNavigationItem === item ? 'header__menuItem--active' : '']"
-    [routerLink]="[''].concat(item.pathParts[0])"
-    (click)="categorySelection.close()"
+    (click)="categorySelection.close(); navigateToCategory(item);"
   >
     {{'NAVIGATION_' + item.toId | translate}}
   </div>
