--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -87,6 +87,7 @@ a  {
       border-radius: 0.5em;
       cursor: pointer;
       color: $container-color;
+      margin-top: 0.2em;
 
       &:focus-visible {
         outline: none;
