--- a/src/app/component/landing-pages/start-page.component.scss
+++ b/src/app/component/landing-pages/start-page.component.scss
@@ -21,8 +21,12 @@
   }
 
   &__content {
-    padding-top: 12.5em;
+    padding-top: 8.5em;
     text-align: center;
+
+    @media screen and (min-width: 576px) {
+      padding-top: 12.5em;
+    }
 
     @media screen and (min-width: 786px) {
       padding-top: 20em;
@@ -52,12 +56,13 @@
 
     &Title {
       color: #FFF;
-      font-size: 2.3em;
+      font-size: 1.8em;
       font-weight: bolder;
       margin-top: 1em;
       text-shadow: #FC0 1px 0 10px;
 
       @media screen and (min-width: 576px) {
+        font-size: 2.3em;
         margin-top: 2em;
       }
     }
