--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -8,6 +8,7 @@ $font-family: Roboto, sans-serif;
 $header-footer-content-color: #122947;
 $page-background: #f3f4f2;
 $content-price-color: #DE5935;
+$content-price-color-as-rgb: rgb(222, 89, 53);
 $logo-capital-letter-color: #DE5935;
 $logo-letter-color: #354e61;
 $logo-slogan-color: orange;
