--- a/src/app/component/item/item.component.scss
+++ b/src/app/component/item/item.component.scss
@@ -55,6 +55,34 @@
     }
   }
 
+  &__discount {
+    background-color: rgba($content-price-color-as-rgb, 0.40);
+    border-color: rgba($content-price-color-as-rgb, 0.60);
+    border-style: dotted;
+    cursor: pointer;
+    font-size: 1.25em;
+    margin-bottom: 1em;
+    padding: 0.75em;
+
+    b {
+      text-decoration: underline;
+    }
+  }
+
+  &__discountDialog {
+    padding: 2em;
+    min-width: 40%;
+  }
+
+  &__discountDialogLink {
+    width: 20em;
+  }
+
+  &__discountDialogLinkWrapper {
+    display: flex;
+    justify-content: center;
+  }
+
   &__hashtag {
     margin-right: 0.25em;
     padding-bottom: 0.25em;
