--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div *ngIf="dialog && !isLoading">
-  <div class="dialog dialog__close">
+  <div class="dialog__close">
     <i class="fa fa-times-circle" (click)="dialog!.close()"></i>
   </div>
 
