- added category - added rendering of reference price and unit

--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -138,6 +138,12 @@
       }
     }
 
+    &--referenceUnit {
+      font-size: 0.9em;
+      font-weight: normal;
+      margin-bottom: 0.2em;
+    }
+
     &--updatedOn {
       font-size: 0.9em;
       font-weight: normal;
