--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -47,6 +47,9 @@
                 <div>
                   {{getShopNameFromUrl(itemWithLowestPrice.link)}}:<span *ngIf="renderPrice(itemWithLowestPrice)" class="productInformation__offer--price">{{renderPrice(itemWithLowestPrice)}}</span>
                 </div>
+                <div *ngIf="itemWithLowestPrice.priceInitial && itemWithLowestPrice.referenceUnit" class="productInformation__offer--referenceUnit">
+                  ({{ CorrespondingItem.renderPriceAmount(itemWithLowestPrice.pricePerUnit) }} / {{ (itemWithLowestPrice.referenceUnit || '').trim() }})
+                </div>
                 <div *ngIf="itemWithLowestPrice.productCondition">
                   {{itemWithLowestPrice.productCondition}}
                 </div>
@@ -68,6 +71,9 @@
                 <div class="button productInformation__offer">
                   <div>
                     {{getShopNameFromUrl(offer?.link)}}: <span *ngIf="renderPrice(offer)" class="productInformation__offer--price">{{renderPrice(offer)}}</span>
+                  </div>
+                  <div *ngIf="offer?.priceInitial && offer?.referenceUnit" class="productInformation__offer--referenceUnit">
+                    ({{ CorrespondingItem.renderPriceAmount(offer?.pricePerUnit) }} / {{ (offer?.referenceUnit || '').trim() }})
                   </div>
                   <div *ngIf="offer?.productCondition">
                     {{offer?.productCondition}}
