- added missing disclaimer

--- a/src/app/component/item/item.component.html
+++ b/src/app/component/item/item.component.html
@@ -84,4 +84,10 @@
   <div *ngIf="discountItem?.conditions">
     * {{discountItem?.conditions || '' | translate}}
   </div>
+
+  <div class="container mt-2">
+    <div class="col-12">
+      {{ 'PROVISION_DISCLAIMER' | translate }}
+    </div>
+  </div>
 </dialog>
