--- a/src/app/component/wishlist/wishlist-items.component.html
+++ b/src/app/component/wishlist/wishlist-items.component.html
@@ -5,3 +5,9 @@
     </div>
   </div>
 </div>
+
+<div class="container pt-3 pb-3">
+  <div class="col-12 informationItems__disclaimer">
+    {{ 'PROVISION_DISCLAIMER' | translate }}
+  </div>
+</div>
