--- a/src/app/component/overview/items.component.html
+++ b/src/app/component/overview/items.component.html
@@ -40,6 +40,12 @@
       </app-item>
     </div>
   </div>
+
+  <div class="container informationItems__disclaimer informationItems__content">
+    <div class="col-12">
+      {{ 'PROVISION_DISCLAIMER' | translate }}
+    </div>
+  </div>
 </div>
 
 <div class="container">
