--- a/src/app/component/overview/items.component.scss
+++ b/src/app/component/overview/items.component.scss
@@ -62,6 +62,11 @@
       padding-top: 4.5em;
     }
   }
+
+  &__disclaimer {
+    font-size: 0.8em;
+    font-style: italic;
+  }
 }
 
 .noResults {
