--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -101,6 +101,11 @@
     padding-top: 1em;
   }
 
+  &__disclaimer {
+    font-size: 0.8em;
+    font-style: italic;
+  }
+
   &__header {
     padding-top: 1em;
     text-align: left;
