--- a/src/app/component/wishlist/wishlist-items.component.scss
+++ b/src/app/component/wishlist/wishlist-items.component.scss
@@ -1,4 +1,5 @@
 @import "../../../styles";
+@import "../../variables";
 
 .informationItems {
   &__container {
@@ -20,5 +21,11 @@
   &__content {
     display: flex;
     padding-top: 4.5em;
+  }
+
+  &__disclaimer {
+    color: $content-color;
+    font-size: 0.8em;
+    font-style: italic;
   }
 }
