--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -7,9 +7,7 @@
   <div class="row">
     <div class="col-12 col-md-6">
       <div class="carousel__viewport">
-          <div
-            *ngFor="let imageBigUrl of slideImageUrls; let i = index;"
-          >
+          <div *ngFor="let imageBigUrl of slideImageUrls; let i = index;">
             <img
               #img
               src="{{imageBigUrl}}"
@@ -18,6 +16,13 @@
               (error)="img.src = 'assets/images/broken-image.png'"
             />
           </div>
+      </div>
+
+      <div class="d-none {{item?.priceHistory?.length ? 'd-lg-block' : ''}} mt-2">
+        <h2 class="singleProductView__sectionHeader text-start">{{ 'PRICE_HISTORY' | translate }}</h2>
+        <canvas id="priceHistoryChartA" width="400" height="150">
+          {{priceHistoryChartA}}
+        </canvas>
       </div>
     </div>
     <div class="col-12 col-md-6">
@@ -37,6 +42,13 @@
         </section>
 
         <section>
+          <div class="{{item?.priceHistory?.length ? 'd-lg-none' : 'd-none'}}">
+            <h2 class="singleProductView__sectionHeader">{{ 'PRICE_HISTORY' | translate }}</h2>
+            <canvas id="priceHistoryChartB" width="300" height="150">
+              {{priceHistoryChartA}}
+            </canvas>
+          </div>
+
           <div class="productInformation__header">
             <h2 class="singleProductView__sectionHeader">{{( areThereMorePrices ? 'TOP_OFFER' : 'OFFER') | translate }}</h2>
           </div>
@@ -114,26 +126,6 @@
     </div>
   </div>
 
-  <div class="row productInformation__share">
-    <div class="col-12 productDetails">
-      <div class="productInformation">
-        <h2 class="singleProductView__sectionHeader">{{'SHARE' | translate}}</h2>
-        <a [href]="safePinterestUri" target="pinterest" class="button__wrapper">
-          <div class="button singleProductView__shareButton">
-            <img src="assets/images/pinterest.png" class="singleProductView__shareIcon"/>
-            {{'SHARE_ON_PINTEREST' | translate}}
-          </div>
-        </a>
-
-        <a [href]="safeWhatsAppUri" class="button__wrapper">
-          <div class="button singleProductView__shareButton singleProductView__shareButton--onlyForMobile">
-            <img src="assets/images/whatsapp.png" class="singleProductView__shareIcon"/>
-            {{'SHARE_ON_WHATSAPP' | translate}}
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
   <div class="row">
     <div class="col-12 productDetails">
       <section class="productInformation {{item?.teaserTexts?.length ? '' : 'productInformation--last'}} productInformation__header productDetails__wrapper">
@@ -163,6 +155,27 @@
           </li>
         </ul>
       </section>
+    </div>
+  </div>
+
+  <div class="row productInformation__share">
+    <div class="col-12 productDetails">
+      <div class="productInformation">
+        <h2 class="singleProductView__sectionHeader">{{'SHARE' | translate}}</h2>
+        <a [href]="safePinterestUri" target="pinterest" class="button__wrapper">
+          <div class="button singleProductView__shareButton">
+            <img src="assets/images/pinterest.png" class="singleProductView__shareIcon"/>
+            {{'SHARE_ON_PINTEREST' | translate}}
+          </div>
+        </a>
+
+        <a [href]="safeWhatsAppUri" class="button__wrapper">
+          <div class="button singleProductView__shareButton singleProductView__shareButton--onlyForMobile">
+            <img src="assets/images/whatsapp.png" class="singleProductView__shareIcon"/>
+            {{'SHARE_ON_WHATSAPP' | translate}}
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 
