--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-  <div>
+  <div *ngIf="isClientSide">
     <div *ngIf="shopsFilters.length">
       <h5 class="filter filter__title filter__title--gap">Shops</h5>
       <div class="filters filters__items">
