--- a/src/app/component/product-view/single-product-view.component.html
+++ b/src/app/component/product-view/single-product-view.component.html
@@ -128,7 +128,7 @@
 
   <div class="row">
     <div class="col-12 productDetails">
-      <section class="productInformation {{item?.teaserTexts?.length ? '' : 'productInformation--last'}} productInformation__heade productDetails__wrappe">
+      <section class="productInformation {{item?.teaserTexts?.length ? '' : 'productInformation--last'}} productInformation__header productDetails__wrapper">
         <div *ngIf="getItemDetails(item)?.length">
           <div class="productInformation__header">
             <h2 class="singleProductView__sectionHeader">{{'PRODUCT_DETAILS' | translate}}</h2>
