--- a/src/app/component/filter/filter-selection.component.html
+++ b/src/app/component/filter/filter-selection.component.html
@@ -116,6 +116,23 @@
       </div>
     </div>
 
+    <div *ngIf="genreFilters.length">
+      <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_GENRES' | translate }}</h5>
+      <div class="filters filters__items">
+        <div *ngFor="let filter of genreFilters" class="form-check filters__item">
+          <input
+            type="checkbox"
+            class="form-check-input"
+            id="{{filter.id}}"
+            value="{{filter.id}}"
+            (change)="toggleFilter(filter.id)"
+            [defaultChecked]="isFilterSelected(filter.id)"/>
+          <label for="{{filter.id}}" class="form-check-label">{{filter.filterLabelId}}</label>
+        </div>
+      </div>
+    </div>
+  </div>
+
     <div *ngIf="sustainabilityFilters.length">
       <h5 class="filter filter__title filter__title--gap">{{ 'FILTERS_SUSTAINABILITY' | translate }}</h5>
       <div class="filters filters__items">
