--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -30,5 +30,9 @@
     <div class="col-12 startPage__disclaimer">
       {{ 'PROVISION_DISCLAIMER' | translate }}
     </div>
+
+    <div class="col-12 startPage__seo mt-5 mb-5">
+      {{ 'SEO_STARTPAGE_TEASER' | translate }}
+    </div>
   </div>
 </div>
