--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showFooter" class="footer">
+<footer *ngIf="showFooter" class="footer">
   <div class="container">
     <div class="row">
       <div class="footer__links">
@@ -8,4 +8,4 @@
       </div>
     </div>
   </div>
-</div>
+</footer>
