--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<header class="header">
   <div class="container">
     <div class="row header__content">
       <div class="col-12 header__title">
@@ -88,7 +88,7 @@
   <a href="https://www.pinterest.de/wewannashop" title="follow us on pinterest" target="ww-pinterest">
     <img src="assets/images/pinterest.png" class="socialMedia__icons{{showSearchBar ? '' : ' socialMedia__icons--thinHeader'}} socialMedia__icons--pinterest"/>
   </a>
-</div>
+</header>
 
 
 
