--- a/src/app/component/landing-pages/start-page.component.html
+++ b/src/app/component/landing-pages/start-page.component.html
@@ -31,8 +31,8 @@
       {{ 'PROVISION_DISCLAIMER' | translate }}
     </div>
 
-    <div class="col-12 startPage__seo mt-5 mb-5">
+    <article class="col-12 startPage__seo mt-5 mb-5">
       {{ 'SEO_STARTPAGE_TEASER' | translate }}
-    </div>
+    </article>
   </div>
 </div>
