--- a/src/app/component/product-view/single-product-view.component.scss
+++ b/src/app/component/product-view/single-product-view.component.scss
@@ -1,33 +1,7 @@
 @import 'src/app/variables';
 @import 'src/styles/controls';
 
-.carousel__viewport {
-  background-color: #ffffff;
-  padding-bottom: 1em;
-  padding-top: 1em;
-}
-
-.content {
-  &__backToOverview {
-    margin-bottom: 2em;
-  }
-
-  &--center {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
-
-.highlights {
-  &__item {
-    margin-top: 0.5em;
-  }
-}
-
 .mainStage {
-  display: flex;
-
   &__productDescription {
     display: -webkit-box;
     line-clamp: 8;
@@ -74,18 +48,6 @@
       color: $container-background-color;
     }
   }
-
-  &__label {
-    font-weight: bold;
-  }
-
-  &__wrapper {
-    width: 100%;
-  }
-
-  &--left {
-    justify-content: unset;
-  }
 }
 
 .productInformation {
@@ -98,22 +60,9 @@
     padding: unset;
   }
 
-  &--last {
-    padding-bottom: 3em;
-  }
-
-  &--p {
-    padding-top: 1em;
-  }
-
   &__disclaimer {
     font-size: 0.8em;
     font-style: italic;
-  }
-
-  &__header {
-    padding-top: 1em;
-    text-align: left;
   }
 
   &__offer {
@@ -167,25 +116,13 @@
       text-decoration: none;
     }
   }
-
-  &__share {
-    margin-bottom: 1.5em;
-  }
 }
 
 .singleProductView {
-  &__backToOverview {
-    margin: 0.25em;
-  }
-
-  &__content {
-    padding-top: 4.5em;
-    text-align: center;
-  }
-
   &__sectionHeader {
     color: $content-color;
     font-size: 1.5em;
+    font-weight: 700;
   }
 
   &__shareButton {
